--- a/templates/base.html
+++ b/templates/base.html
@@ -155,6 +155,11 @@
           <i class="fas fa-file-alt me-2"></i>Submit Timesheet
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link {% if request.path == '/login' %}active{% endif %}" href="{{ url_for('login') }}">
+          <i class="fas fa-user-shield me-2"></i>Manager
+        </a>
+      </li>
       {% if session.get('is_manager') %}
       <li class="nav-item">
         <a class="nav-link {% if request.path == '/dashboard' %}active{% endif %}" href="{{ url_for('dashboard') }}">
